--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -71,8 +71,9 @@
   --popover-foreground: oklch(0.145 0 0);
   --primary: #67c42a;
   --primary-foreground: oklch(0.985 0 0);
-  --secondary: oklch(0.97 0 0);
+  --secondary: #ba49b0;
   --secondary-foreground: oklch(0.205 0 0);
+  --orange: #e56c09;
   --muted: oklch(0.97 0 0);
   --muted-foreground: oklch(0.556 0 0);
   --accent: oklch(0.97 0 0);
@@ -105,6 +106,7 @@
   --popover-foreground: oklch(0.985 0 0);
   --primary: oklch(0.922 0 0);
   --primary-foreground: oklch(0.205 0 0);
+  --orange: #e56c09;
   --secondary: oklch(0.269 0 0);
   --secondary-foreground: oklch(0.985 0 0);
   --muted: oklch(0.269 0 0);
@@ -145,5 +147,8 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+  .padded-x {
+    @apply px-5;
   }
 }
