--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -152,3 +152,36 @@
     @apply px-5;
   }
 }
+
+
+* {
+  transition: 500ms ease-in-out;
+}
+
+* {
+  animation: cubic-bezier(0.6, -0.28, 0.735, 0.045);
+  scroll-behavior: smooth;
+}
+
+/* designing scroll bar */
+/* width */
+::-webkit-scrollbar {
+  width: 0px;
+  height: 1px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background-color: #ffffff00;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background-color: #99999900;
+  border-radius: 50px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #99999900;
+}
