--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -149,7 +149,7 @@
     @apply bg-background text-foreground;
   }
   .padded-x {
-    @apply px-5;
+    @apply m-auto max-w-[2000px] px-4 md:px-14 xl:px-24 2xl:px-32;
   }
 }
 
