--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -151,6 +151,9 @@
   .padded-x {
     @apply m-auto max-w-[2000px] px-4 md:px-14 xl:px-24 2xl:px-32;
   }
+  .page {
+    @apply min-h-screen
+  }
 }
 
 
