--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -151,6 +151,9 @@
   .padded-x {
     @apply m-auto max-w-[2000px] px-4 md:px-14 xl:px-24 2xl:px-32;
   }
+  .padded-y {
+    @apply py-15 md:py-25 xl:py-36 2xl:py-48;
+  }
   .page {
     @apply min-h-screen
   }
